WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
100891
[BLACKBERRY] Custom WebWorks context menus don't always work.
https://bugs.webkit.org/show_bug.cgi?id=100891
Summary
[BLACKBERRY] Custom WebWorks context menus don't always work.
gmak
Reported
2012-10-31 14:38:49 PDT
Seems to be a change in the node that we get.
Attachments
Patch - with changelog
(3.25 KB, patch)
2012-10-31 14:49 PDT
,
gmak
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
gmak
Comment 1
2012-10-31 14:49:54 PDT
Created
attachment 171724
[details]
Patch - with changelog
Rob Buis
Comment 2
2012-10-31 14:56:22 PDT
Comment on
attachment 171724
[details]
Patch - with changelog LGTM.
WebKit Review Bot
Comment 3
2012-10-31 17:04:12 PDT
Comment on
attachment 171724
[details]
Patch - with changelog Clearing flags on attachment: 171724 Committed
r133097
: <
http://trac.webkit.org/changeset/133097
>
WebKit Review Bot
Comment 4
2012-10-31 17:04:16 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug