[BLACKBERRY] Custom WebWorks context menus don't always work. https://bugs.webkit.org/show_bug.cgi?id=100891

Patch by Genevieve Mak <gmak@rim.com> on 2012-10-31
Reviewed by Rob Buis.

Walk up the dom tree until we find the webworks attribute or run out
of parent nodes.
PR# 227732

* Api/WebPage.cpp:
(BlackBerry::WebKit::WebPagePrivate::webContext):

git-svn-id: svn://svn.chromium.org/blink/trunk@133097 bbb929c8-8fbe-4397-9dbb-9b2b20218538